bug fix: shift page details panel shows volunteers for all shifts

--- a/frontend/src/components/DetailsPanel/index.css
+++ b/frontend/src/components/DetailsPanel/index.css
@@ -16,7 +16,7 @@
      height: 100vh;
      top: 0px;
      right: 0px;
-     z-index: 1;
+     z-index: 4;
      transition: 0.2s all ease-in-out;
      border-left: 1px solid #e3e3e3;
      background: white;
